--- a/package.json
+++ b/package.json
@@ -3,9 +3,10 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www && node ./scripts/updateDb.js"
+    "start": "node ./bin/www"
   },
   "dependencies": {
+    "content-disposition": "^0.5.2",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "express": "~4.16.1",
